--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "perf_hooks": "^0.0.1",
+    "sprintf-js": "^1.1.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
@@ -29,6 +31,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@types/lodash": "^4.14.179",
+    "@types/sprintf-js": "^1.1.2",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
@@ -38,6 +41,7 @@
     "prettier": "^2.5.1",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "ts-node": "^10.7.0"
   }
 }
